--- a/cpp07/ex02/Makefile
+++ b/cpp07/ex02/Makefile
@@ -8,10 +8,10 @@ OBJS = $(SRCS:.cpp=.o)
 
 all: $(NAME)
 
-$(NAME): $(OBJS) Array.hpp
+$(NAME): $(OBJS) Array.hpp Array.tpp
 	c++ $(CPP_FLAGS) $(OBJS) -o $(NAME)
 
-%.o: %.cpp Array.hpp
+%.o: %.cpp Array.hpp Array.tpp
 	c++ $(CPP_FLAGS) -c $< -o $@
 
 clean:
